--- a/my-portfolio/src/components/home.css
+++ b/my-portfolio/src/components/home.css
@@ -15,8 +15,14 @@ h1 {
   display: flex;
   flex-direction: column;
 }
-/*
-@media screen and (max-width: 768px) {
+
+.home-img {
+  display: flex;
+  justify-content: center;
+  width: auto;
+}
+
+/*@media screen and (max-width: 768px) {
   .home {
     display: flex;
     text-align: center;
